# nsx-ambiq-sdk

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
modules/nsx-ambiq-bsp-r5/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-ambiq-hal-r4/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-ambiq-hal-r5/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-ambiq-hal-r5/includes-api/: nsx_ambiq_pmu.h
modules/nsx-ambiq-hal-r5/src/: nsx_ambiq_pmu.c
modules/nsx-ambiq-usb-r4/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-ambiq-usb-r4/sdk/src/usb/: cdc_device_nsx.c  nsx_usb_hooks.h
modules/nsx-ambiq-usb-r5/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-ambiq-usb-r5/sdk/src/usb/: cdc_device_nsx.c
modules/nsx-ambiqsuite-r2/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-ambiqsuite-r2/sdk/devices/: am_devices.h  am_devices_button.h  am_devices_led.h
modules/nsx-ambiqsuite-r2/sdk/mcu/: am_sdk_version.h
modules/nsx-ambiqsuite-r2/sdk/src/: am_util_delay.c  am_util_stdio.c
modules/nsx-ambiqsuite-r2/sdk/utils/: am_util.h  am_util_aes.h  am_util_ble_em9305.h  am_util_bootloader.h  am_util_debug.h  am_util_dme.h  am_util_id.h  am_util_math.h  am_util_multi_boot.h  am_util_multi_boot_private.h  am_util_pmu.h  am_util_pp_ap510L.h  am_util_regdump_apollo330P.h  am_util_regdump_apollo510L.h  am_util_string.c  am_util_string.h  am_util_swd.h
modules/nsx-audio/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-audio/includes-api/: nsx_audio.h
modules/nsx-audio/src/apollo3/: nsx_pdm_apollo3.c
modules/nsx-audio/src/apollo5/: nsx_pdm_apollo5.c
modules/nsx-cmsis-core/: CHANGELOG.md  CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-core/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-core/includes-api/: nsx_core.h  nsx_mem.h  nsx_presets.h  nsx_ring_buffer.h  nsx_system.h
modules/nsx-core/src/: nsx_cache.c  nsx_core_lifecycle.c  nsx_core_portable.c  nsx_presets.c  nsx_retarget.c  nsx_ring_buffer.c  nsx_system.c  sbrk.c
modules/nsx-core/src/apollo2/: nsx_system_platform.c
modules/nsx-core/src/apollo2/gcc/: linker_script.ld
modules/nsx-core/src/apollo3/: nsx_system_platform.c
modules/nsx-core/src/apollo3/gcc/: startup_gcc.c
modules/nsx-core/src/apollo330P/armclang/: linker_script_itcm_sbl.sct  linker_script_nbl.sct
modules/nsx-core/src/apollo330P/gcc/: linker_script_sbl.ld  startup_gcc.c
modules/nsx-core/src/apollo3p/gcc/: startup_gcc.c
modules/nsx-core/src/apollo4l/gcc/: linker_script.ld  startup_gcc.c
modules/nsx-core/src/apollo4p/: nsx_system_platform.c
modules/nsx-core/src/apollo510/: nsx_system_platform.c
modules/nsx-core/tests/: nsx_core_full_regression.ini  nsx_core_tests.c  nsx_core_tests.h
modules/nsx-freertos/: CMakeLists.txt  LICENSE  README.md  nsx-module.yaml
modules/nsx-freertos/includes-api/: nsx_freertos.h
modules/nsx-freertos/src/: nsx_freertos.c  nsx_freertos_handlers_cm4f.c
modules/nsx-freertos/templates/: FreeRTOSConfig.h.template
modules/nsx-gpio/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-gpio/includes-api/: nsx_gpio.h
modules/nsx-gpio/src/: nsx_gpio.c
modules/nsx-i2c/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-i2c/includes-api/: nsx_i2c.h  nsx_i2c_register_driver.h
modules/nsx-i2c/src/: nsx_i2c.c  nsx_i2c_register_driver.c
modules/nsx-interrupt/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-interrupt/includes-api/: nsx_interrupt.h
modules/nsx-interrupt/src/: nsx_interrupt.c
modules/nsx-interrupt/src/apollo3/: nsx_interrupt_vectors.c
modules/nsx-interrupt/src/apollo330/: nsx_interrupt_vectors.c
modules/nsx-interrupt/src/apollo4/: nsx_interrupt_vectors.c
modules/nsx-interrupt/src/apollo5/: nsx_interrupt_vectors.c
modules/nsx-perf/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-perf/includes-api/: nsx_perf_profile.h
modules/nsx-perf/src/: nsx_perf_profile.c
modules/nsx-pmu-armv8m/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-pmu-armv8m/includes-api/: nsx_pmu_accumulator.h  nsx_pmu_capture.h  nsx_pmu_map.h  nsx_pmu_transport.h  nsx_pmu_utils.h
modules/nsx-pmu-armv8m/src/armv8m/: nsx_pmu_accumulator.c  nsx_pmu_capture.c  nsx_pmu_transport.c  nsx_pmu_utils.c
modules/nsx-power/: CHANGELOG.md  CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-power/includes-api/: nsx_power.h
modules/nsx-power/src/: nsx_power.c  nsx_power_monitor.c  nsx_power_profile.c
modules/nsx-power/src/apollo3/: nsx_power.c  nsx_power_profile.c
modules/nsx-power/src/apollo330/: nsx_power.c  nsx_power_profile.c
modules/nsx-power/src/apollo4/: nsx_power.c  nsx_power_profile.c  nsx_power_tempco.c
modules/nsx-power/src/apollo5/: nsx_power.c  nsx_power_profile.c
modules/nsx-psram/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-psram/includes-api/: nsx_psram.h
modules/nsx-psram/src/: nsx_psram.c
modules/nsx-psram/src/apollo3/: nsx_psram.c
modules/nsx-psram/src/apollo4/: nsx_psram.c
modules/nsx-psram/src/apollo5/: nsx_psram.c
modules/nsx-soc-hal/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-spi/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-spi/includes-api/: nsx_spi.h
modules/nsx-spi/src/: nsx_spi.c
modules/nsx-timer/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-timer/includes-api/: nsx_timer.h
modules/nsx-timer/src/: nsx_timer.c
modules/nsx-timer/src/apollo3/: nsx_timer_ap3.c
modules/nsx-timer/src/apollo330/: nsx_timer_ap330.c
modules/nsx-timer/src/apollo4/: nsx_timer_ap4.c
modules/nsx-timer/src/apollo5/: nsx_timer_ap5.c
modules/nsx-uart/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-uart/includes-api/: nsx_uart.h
modules/nsx-uart/src/: nsx_uart.c
modules/nsx-uart/src/apollo4/: nsx_uart.c
modules/nsx-uart/src/apollo5/: nsx_uart.c
modules/nsx-usb/: CMakeLists.txt  README.md  nsx-module.yaml
modules/nsx-usb/includes-api/: nsx_usb.h
modules/nsx-usb/src/: nsx_usb.c
modules/nsx-usb/src/overrides/: nsx_usb_descriptors.c  nsx_usb_overrides.c
(+480 files in other folders)
